source/main/default/objects/TriggerSetting__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>