source/main/default/objects/TriggerSetting__mdt/fields/UserNamesIds__c.field-meta.xml
<CustomField>
    <fullName>UserNamesIds__c</fullName>
    <label>User Names / Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>