source/main/default/objects/TriggerSetting__mdt/validationRules/NeverBothClassAndObject.validationRule-meta.xml
<ValidationRule>
    <fullName>NeverBothClassAndObject</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(SObjectName__c)) &amp;&amp; NOT(ISBLANK(ClassName__c))</errorConditionFormula>
    <errorMessage>You can never disable both granular classes and entire Objects in the same setting. Please select one to decide on.</errorMessage>
</ValidationRule>